# huh-computer-music

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  bish  dev_requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE
.github/hooks/: pre-commit
Demos/: computer_music.ipynb
Docs/: Makefile  conf.py  make.bat
cookbook/: params.json  rx.py
demos/: Pycon2018-talk.ipynb  computer_music.ipynb  huh_computer_music.ipynb  random_bish.sh  requirements.txt
docs/: README.md  index.rst
hcm/: __init__.py  bish  bish.py  computer_music.py  dynamical.py  filters.py  io.py  music.py  osc.py  synth.py  ts.py  types.py
hcm/dynamical/: __init__.py  lorenz.py
hcm/io/: __init__.py  channel.py  wav.py
hcm/music/: __init__.py  chords.py  const.py  keys.py  music.py  notes.py
hcm/signal/: __init__.py  signal.py  time.py  vc.py  vco.py
hcm/signal/noise/: __init__.py  noise.py
hcm/signal/osc/: __init__.py  oscillator.py
hcm/ts/: __init__.py  timeseries.py
src/: bish.py
src/hcm/: io.py  ts.py  types.py
src/hcm/music/: const.py  music.py  sample.py
src/hcm/signal/: noise.py  vc.py
