[project]
name = "huh-computer-music"
version = "0.1.0"
description = "A tiny computer music library powered by NumPy"
authors = [
    { name = "Jason Doar", email = "jbdoar@gmail.com" },
    { name = "Alex Merose", email = "al@merose.com" },
]
license = "MIT"
dependencies = [
    "click<8.1.0",
    "numpy",
    "rx==1.6.1",
    "scipy",
    "sounddevice",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
bish = "hcm:cli"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "sphinx>=8.1.3",
    "mypy>=1.12.1",
    "hacking>=7.0.0",
]

[tool.rye.scripts]
lint = "flake8 --exclude=lib/,bin/,docs/conf.py --ignore F401,H301,E203,E241 hcm"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["hcm"]
